refactor msisdn
