# docs/swagger.yaml
@@ -59,9 +59,9 @@ paths:
             schema:
               type: object
               required:
-              - phone_no
+              - msisdn
               properties:
-                phone_no:
+                msisdn:
                   type: string
                   description: "9 digit phone number with prefix +48"
                   example: "+48123123123"
@@ -101,10 +101,10 @@ paths:
             schema:
               type: object
               required:
-                - phone_no
+                - msisdn
                 - code
               properties:
-                phone_no:
+                msisdn:
                   type: string
                   description: "9 digit phone number with prefix +48"
                   example: "+48123123123"
